# autoCARL

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  NOTES  README.md  hello_world.ipynb  hello_world_tutorial.ipynb  local_compile.sh
.github/workflows/: README.md  binaries.yml  binaries_and_pypi.yml  build.yml  cmake.yml  release_binaries.yml  setup_runner.sh
carlsim/: CMakeLists.txt
carlsim/benchmark/: CMakeLists.txt
carlsim/kernel/: CMakeLists.txt
carlsim/kernel/inc/: cuda_version_control.h  helper_cuda.h
carlsim/test/: CMakeLists.txt  coba.cpp  compartments.cpp
carlsim/test6/: CMakeLists.txt
carlsim/testadv/: CMakeLists.txt
projects/: README.md  README.mde
projects/ca3_example_net/results/: README.md
projects/hello_world/: CMakeLists.txt
projects/hello_world/src/: main_hello_world.cpp
pyCARL/: CMakeLists.txt  README.md  hello_world.ipynb  setup.py
pyCARL/carlsim/: __init__.py  carlsim.py  carlsim_wrap.cxx  setup.py
pyCARL/test/hello_world/: hello_world.py
tools/simple_weight_tuner/: CMakeLists.txt
tools/spike_generators/: CMakeLists.txt
tools/stopwatch/: CMakeLists.txt
tools/visual_stimulus/: CMakeLists.txt
